<?xml version="1.0"?>
<package>
  <name>fetcheus</name>
  <version>1.0.6</version>
  <description>The fetcheus package</description>

  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pr2eus</build_depend> <!-- for robot interface -->
  <build_depend>fetch_description</build_depend>
  <build_depend>rostest</build_depend>

  <run_depend>pr2eus</run_depend> <!-- for robot interface -->
  <run_depend>fetch_description</run_depend>

  <test_depend>fetch_gazebo</test_depend>
  <test_depend>fetch_moveit_config</test_depend>

  <export>
  </export>
</package>
