<?xml version="1.0"?>
<package format="2">
  <name>jsk_fetch_diagnosis</name>
  <version>0.0.0</version>
  <description>The fetch_diagnosis package</description>

  <maintainer email="shinjo@todo.todo">shinjo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>

  <exec_depend>message_generation</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>

  </export>
</package>
