<?xml version="1.0"?>
<package format="2">
  <name>jsk_fetch_diagnosis</name>
  <version>1.1.0</version>
  <description>The fetch_diagnosis package</description>

  <maintainer email="shinjo@jsk.imi.i.u-tokyo.ac.jp">Koki Shinjo</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>

  </export>
</package>
