<?xml version="1.0"?>
<package format="2">
  <name>jsk_fetch_gazebo_demo</name>
  <version>0.0.1</version>
  <description>Fetch gazebo demo for roseus implementation</description>

  <maintainer email="yamaguchi@jsk.imi.i.u-tokyo.ac.jp">Naoya Yamaguchi</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>fetch_gazebo_demo</exec_depend>

  <!-- to avoid roslaunch-check, this should be include in fetch_gazebo -->
  <exec_depend>robot_state_pubclisher</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>simple_grasping</exec_depend>
  <exec_depend>fetch_gazebo</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>fetch_moveit_config</exec_depend>

  <test_depend>rostest</test_depend>
  <test_depend>roslaunch</test_depend>

</package>
